tests/fixtures/invalid/pow_float_str_bool.py
# Cannot call pow() with Float, Str, Bool
x = pow(1.0, "hello", True)
